// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query getRegionalStats fails validation if start date is past end date 1`] = `
Object {
  "data": Object {
    "getRegionalStats": null,
  },
  "errors": Array [
    [GraphQLError: End date must come after start date],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query getRegionalStats fetches stats for each region with a defined category and type 1`] = `
Object {
  "data": Object {
    "getRegionalStats": Array [
      Object {
        "count": 2,
        "max": 170000,
        "mean": 140000,
        "median": 140000,
        "min": 110000,
        "mode": 110000,
        "name": "Āgenskalns",
        "standardDev": 30000,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Atgāzene",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Avoti",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Beberbeķi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Berģi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bieriņi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bišumuiža",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bolderāja",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Brasa",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Brekši",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bukulti",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Buļļi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Centrs",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Čiekurkalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Daugavgrīva",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dreiliņi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dzirciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dārzciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dārziņi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Grīziņkalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Imanta",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Iļģuciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Jaunciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Jugla",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Katlakalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Kleisti",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Kundziņsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Ķengarags",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Ķīpsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mangaļsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Maskavas forstate",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mežaparks",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mežciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mīlgrāvis",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mūkupurvs",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Pleskodāle",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Purvciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Pētersala-Andrejsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Pļavnieki",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Rumbula",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Salas",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Sarkandaugava",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Skanste",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Šķirotava",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Spilve",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Suži",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Šampēteris",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Teika",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Torņakalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Trīsciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecdaugava",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecmilgrāvis",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecpilsēta",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecāķi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Voleri",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Zasulauks",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Ziepniekkalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Zolitūde",
        "standardDev": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query getRegionalStats fetches stats for each region with all categories and types 1`] = `
Object {
  "data": Object {
    "getRegionalStats": Array [
      Object {
        "count": 3,
        "max": 170000,
        "mean": 116666.66666666667,
        "median": 110000,
        "min": 70000,
        "mode": 70000,
        "name": "Āgenskalns",
        "standardDev": 41096.093353126504,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Atgāzene",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Avoti",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Beberbeķi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Berģi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bieriņi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bišumuiža",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bolderāja",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Brasa",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Brekši",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Bukulti",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Buļļi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Centrs",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Čiekurkalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Daugavgrīva",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dreiliņi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dzirciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dārzciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Dārziņi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Grīziņkalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Imanta",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Iļģuciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Jaunciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Jugla",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Katlakalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Kleisti",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Kundziņsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Ķengarags",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Ķīpsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mangaļsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Maskavas forstate",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mežaparks",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mežciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mīlgrāvis",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Mūkupurvs",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Pleskodāle",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Purvciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Pētersala-Andrejsala",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Pļavnieki",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Rumbula",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Salas",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Sarkandaugava",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Skanste",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Šķirotava",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Spilve",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Suži",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Šampēteris",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Teika",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Torņakalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Trīsciems",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecdaugava",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecmilgrāvis",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecpilsēta",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Vecāķi",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Voleri",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Zasulauks",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Ziepniekkalns",
        "standardDev": null,
      },
      Object {
        "count": 0,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "mode": null,
        "name": "Zolitūde",
        "standardDev": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
